test/Programs/InvalidTests/multipleParam/multipleParam.fst

-- It doesn't really matter, it should not throw an error here
start : Int
start = 23

fun : Int -> Int -> Int
fun c c = 23
